--- a/QLKyTucXa/Model/App.config
+++ b/QLKyTucXa/Model/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QLKyTucXaDbContext" connectionString="data source=MYLINH\MYLINH;initial catalog=QuanLyKiTucXa;integrated security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="QLKyTucXaDbContext" connectionString="data source=MYLINH\MYLINH;initial catalog=QuanLyKiTucXa2;integrated security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
