--- a/QLKyTucXa/QLKyTucXa/Web.config
+++ b/QLKyTucXa/QLKyTucXa/Web.config
@@ -3,6 +3,7 @@
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
+
 <configuration>
   <configSections>
     
@@ -17,6 +18,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+
+    
+
     <pages validateRequest="false" />
   </system.web>
   <runtime>
@@ -68,7 +72,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QLKyTucXaDbContext" connectionString="data source=MYLINH\MYLINH;initial catalog=QuanLyKiTucXa;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="QLKyTucXaDbContext" connectionString="data source=MYLINH\MYLINH;initial catalog=QuanLyKiTucXa2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -80,4 +84,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
 </configuration>
